# TPE-ENSICAEN-2018

./: .gitignore  .gitmodules  AUTHORS.txt  CMakeLists.txt  Doxyfile  INSTALL.txt  Makefile  README.md  README.txt
include/core/: algos.h  color.h
include/histogram/: color.h
include/set/: colorTree.h  histogram.h  sortedTree.h
src/core/: algos.c  color.c
src/fct/: Makefile
src/histogram/: Makefile  color.c
src/image/: Makefile  image.c
src/main/: Makefile  helloWorld.c  mapping.c  ppmhist.c
src/set/: colorTree.c  histogram.c  sortedTree.c
